# QtVlc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_config.h.in
DemoApp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtVlc/: AbstractMediaList.cpp  AbstractMediaList.h  AbstractMediaListPlayer.cpp  AbstractMediaListPlayer.h  CMakeLists.txt  IVlcVideoDelegate.h  QtVlcConfig.cmake.in  QtVlcConfigVersion.cmake.in  VlcEnum.h  VlcError.cpp  VlcError.h  VlcInstance.cpp  VlcInstance.h  VlcInstance_p.cpp  VlcInstance_p.h  VlcMedia.cpp  VlcMedia.h  VlcMediaList.cpp  VlcMediaList.h  VlcMediaListPlayer.cpp  VlcMediaListPlayer.h  VlcMediaListPlayer_p.cpp  VlcMediaListPlayer_p.h  VlcMediaList_p.cpp  VlcMediaList_p.h  VlcMediaPlayer.cpp  VlcMediaPlayer.h  VlcMediaPlayerAudio.cpp  VlcMediaPlayerAudio.h  VlcMediaPlayerVideo.cpp  VlcMediaPlayerVideo.h  VlcMediaPlayer_p.cpp  VlcMediaPlayer_p.h  VlcMedia_p.cpp  VlcMedia_p.h  common_p.cpp  common_p.h  error.cpp
QtVlcWidgets/: CMakeLists.txt  QtVlcWidgetsConfig.cmake.in  QtVlcWidgetsConfig.h  SeekSlider.cpp  SeekSlider.h  SeekStyle.cpp  SeekStyle.h  SoundSlider.cpp  SoundSlider.h  SoundWidget.cpp  SoundWidget.h  SpecialButtons.cpp  SpecialButtons.h  TimeLabel.cpp  TimeLabel.h  TimeTooltip.cpp  TimeTooltip.h  VlcVideoWidget.cpp  VlcVideoWidget.h  util.h
cmake/: buildVLC.cmake  systemVLC.cmake
include/QtVlc/: AbstractMediaList.h  AbstractMediaListPlayer.h  IVlcVideoDelegate.h  VlcInstance.h  VlcMedia.h  VlcMediaList.h  VlcMediaListPlayer.h  VlcMediaPlayer.h  VlcMediaPlayerAudio.h  VlcMediaPlayerVideo.h  config.h  enum.h  error.h
include/QtVlcWidgets/: SeekSlider.h  SoundSlider.h  SoundWidget.h  SpecialButtons.h  TimeLabel.h  TimeTooltip.h  VlcVideoWidget.h  const.h
